--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-safeway.login.baseURL=http://api.enterprise.glympse.com/api/v1/account/login
+safeway.login.baseURL=http://www.testapi.com
 server.port=8181
